[metadata]
name = cygx1
description = The immensity of the universe is difficult to grasp.
author = Clivern
author_email = hello@clivern.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/Clivern/CygnusX1/
project_urls =
    Documentation = https://github.com/Clivern/CygnusX1/
    Source = https://github.com/Clivern/CygnusX1/
    Changelog = https://github.com/Clivern/CygnusX1/blob/main/CHANGELOG.rst
    Tracker = https://github.com/Clivern/CygnusX1/issues
    Download = https://pypi.org/project/CygnusX1/#files

platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    click<=8.1.8
    requests<=2.32.3
    importlib-metadata<=8.5.0; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests
    recipe
    cache

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    cygx1 = cygx1.cli:main

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
version = 4.1.1
package = cygx1
